@@ -16,7 +16,7 @@
 
 <!--
 
-Copyright (C) 2003-2018  Anders Gavare.  All rights reserved.
+Copyright (C) 2003-2019  Anders Gavare.  All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -47,7 +47,6 @@ SUCH DAMAGE.
 <ul>
   <li><a href="#helenosmalta">HelenOS/malta 0.7.2</a>
   <li><a href="#helenosrpi">HelenOS/rpi 0.7.2</a>
-  <li><a href="#linux_qemu_mips">Linux/QEMU_MIPS</a>
   <li><a href="#linux_vocore">Linux/VoCore</a>
   <li><a href="#freebsd_vocore">FreeBSD/VoCore</a>
 </ul>
@@ -118,40 +117,6 @@ to experiment with the HelenOS kernel:
 
 
 
-
-
-
-
-
-
-
-<p><br>
-<a name="linux_qemu_mips"></a>
-<h3>Linux/QEMU_MIPS:</h3>
-
-I've added a machine mode which emulates the MIPS machine mode used 
-in Fabrice Bellard's <a href="http://www.nongnu.org/qemu/">QEMU</a>.
-Starting with QEMU 0.9.0, there are other MIPS modes in QEMU (i.e. Malta); 
-the QEMU_MIPS mode in GXemul refers to the old QEMU-specific MIPS machine.
-
-<p>The following steps should let you boot into the Linux/QEMU_MIPS
-kernel, in way similar to the <tt>run-qemu</tt> script:
-
-<p>
-<ol>
-  <li>Download the archive from
-	<a href="http://wiki.qemu.org/Download">http://wiki.qemu.org/Download</a> and extract it:<pre>
-	<b>wget <a href="http://wiki.qemu.org/download/mips-test-0.2.tar.gz">http://wiki.qemu.org/download/mips-test-0.2.tar.gz</a>		<font color="red"># 2018-11-16: Unfortunately, the file seems to have been removed!</font>
-	tar zxvf mips-test-0.2.tar.gz</b>
-
-</pre>
-  <li>Start GXemul using the following command line:<pre>
-	<b>gxemul -E qemu_mips -x -M 128 -o 'console=ttyS0
-		rd_start=0x80800000 rd_size=10000000 init=/bin/sh'
-		0x80800000:mips-test/initrd.gz mips-test/vmlinux-2.6.18-3-qemu</b>
-
-</pre>
-</ol>
 
 
 
