@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2005-2011  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2005-2019  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -135,7 +135,6 @@ DEVINIT(pccmos)
 		/*  Malta etc.  */
 		type = MC146818_ALGOR;
 		break;
-	case MACHINE_QEMU_MIPS:
 	case MACHINE_COBALT:
 	case MACHINE_PREP:
 	case MACHINE_MVMEPPC:
